# turtlesimAutomata

./: .~lock.Cover_sheet.odt#  Cover_sheet.odt  README.md  turtlesimAutomata.bash
turtlesimAutomata/: CMakeLists.txt  package.xml
turtlesimAutomata/src/: edge_detect.cpp
